# pydantic-ai-experiments

./: .env.sample  .gitignore  .mcp.json  =1.40.0  =2.0.0  CLAUDE.md  CODE_REVIEW.md  LICENSE  Makefile  RAG_anything.md  README.md  TESTS.md  TEST_QA_REFERENCE.md  clean_notebooks.py  clean_notebooks_cleaned.py  docker-compose.yml  mongo_rag2_cleaned.py  mongo_rag_cleaned.py  profile_output.txt  pyproject.toml  ruff.toml  sample_test_run.txt  streamlit_mem0_app.py  streamlit_nlsql_app.py
.claude/: settings.local.json
basics/: basic_ml.faq
delta_lake/: _inspect_gcs.py  dt_merge.py  example_gcs.py  example_local.py
docs/: ARCHITECTURE_SUMMARY.md  CALL_GRAPH.md  CLAUDE.md  CODE_REVIEW.md  DATASTORE_GUIDE.md  FAQ.md  FAQ_PDF_QUESTION_GENERATOR.md  FAQ_RAG_NLP.md  HYBRID_KG_QUESTIONS.md  KG_PIPELINE.md  PDF_QUESTION_GENERATOR.md  RAG.md  TESTS.md
kg/: __init__.py  age_graph_store.py  entity_index.py  extraction_pipeline.py  legal_extractor.py  risk_graph_builder.py
nl2sql/: README.md  nlp_sql_postgres_v2.py  sql_discovery.py  test_nlp_sql_postgres_v2.py
nlp2sql/: README.md  nlp_sql_postgres_v1.py  nlp_sql_postgres_v2.py  sql_discovery.py  test_nlp_sql_postgres_v2.py
nlp_sql/: README.md  nlp_sql_postgres_v1.py  test_nlp_sql_postgres.py
notebook/: 01.python-essentials-for-ai.ipynb  clean_notebooks.py  create_dir.bat  graphiti_neo4j_ollama.ipyb.ipynb  graphti_neo4j_ollama.ipyb.ipynb  ingestion_pipeline.ipynb  kg1.py  minerU_2.5.ipynb  minerU_2.5.py  minerU_2.5_cleaned.py  mongo_rag.ipynb  mongo_rag2.ipynb  output_graph_basics_page1.html  output_graph_basics_page2.html  output_graph_basics_page3.html  output_id-card.html  (+11 more)
(+366 files in other folders)
